--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "fmt":"prettier --w --ignore-unknown ./src/**/*"
+    "fmt": "pretty-quick"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
@@ -27,7 +27,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8.4.47",
-    "prettier": "3.3.3",
+    "prettier": "^3.3.3",
+    "pretty-quick": "^4.0.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5"
   }
