--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "fmt": "pretty-quick --pattern ./src/**/*"
+    "fmt": "pretty-quick"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "@reduxjs/toolkit": "^2.3.0",
     "classnames": "^2.5.1",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-dropzone": "^14.2.9"
+    "react-dropzone": "^14.2.9",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
